--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,85 +1,27 @@
 {
-  "confirmationPurchase":"Confirmación de tu compra",
-  "weHaveAErrorContactSuport": "Error {code} \nSi el error persiste, contacta a soporte",
-  "iAmNotRegistered":"No estoy registrado",
-  "wantRegister":"Quiero registrarme.",
-  "productBy":"Producto de MOTAXI S.A.S.",
-  "cellPhone":"Celular",
-  "numberPhoneNoValid": "Numero de teléfono no es válido",
-  "next":"Siguiente",
-  "email":"e-mail",
-  "welcome":"Bienvenido",
-  "completeTheData":"Completa los datos",
-  "save":"Guardar",
-  "verifyEmail": "Verificar correo electrónico",
-  "password":"Contraseña",
-  "register":"Registrate",
-  "userRegisterSuccesful":"Usuario registrado correctamente",
-  "nowYouCanLogIn":"Ahora puedes iniciar sesión",
-  "sigIn":"Iniciar sesión",
-  "name":"Nombre",
-  "lastName":"Apellido",
+  "searchCatbreeds":"Buscar en Catbreeds",
+  "adaptability":"Adaptabilidad",
+  "socialNeeds":"Necesidades sociales",
+  "weight":"Peso",
+  "imperial":"imperial",
+  "metric":"metric",
+  "breedEspecifications":"Especificaciones de la raza",
+  "temperament":"Temperamento",
+  "origin":"Origen",
+  "countryCode":"Codigo País",
+  "lifeSpan":"Vida media",
+  "altNames":"Nombres alternativos",
+  "affectionLevel": "nivel de afecto",
+  "childFriendly": "Niño amigable",
+  "dogFriendly": "Amigable con perros",
+  "energyLevel": "Nivel de energía",
   "theNew":"Lo Nuevo",
-  "sendFree":"Envio Gratis",
-  "createAccount":"Crear cuenta",
-  "almostThere":"Falta poco!",
-  "completeDetailsCreateAccount":"Completa tus datos para crear tu cuenta",
-  "loginWith":"Ingresa con",
-  "iNeedHelpEnter":"Necesito ayuda para ingresar",
-  "logAccount":"Ingresa a tu cuenta",
-  "hello":"Hola!",
-  "buyEnterAccount":"Para comprar ingresa tu cuenta",
-  "enterEmailUsername":"Ingresa tu email o usuario",
-  "didForgetPassword":"¿Olvidaste tu contraseña?",
-  "continu":"Continuar",
-  "searchProtiendas":"Buscar en Protiendas",
-  "addCart":"Añadir al carrito",
-  "buyNow":"Comprar ahora",
   "characteristics":"Características",
-  "productSummary":"Resumen del producto",
-  "productDescription":"Descripción del producto",
-  "opinions":"Opiniones",
-  "leaveOpinion":"Deja tu opinión",
-  "mayInterest":"Te puede interesar",
-  "start":"Inicio",
   "favorites":"Favoritos",
-  "notifications":"Notificaciones",
-  "myProfile":"Mi Perfil",
-  "shoppingCart":"Carrito de Compras",
-  "products":"Productos",
-  "total":"Total",
-  "shipment":"Envío",
-  "continueShopping":"Continuar compra",
-  "chooseDeliveryMethod":"Elige la forma de entrega",
-  "delivery":"Entrega",
-  "sendHome":"Enviar a tu domicilio",
-  "addShippingAddress":"Agregar dirección de envío",
-  "pickUpDeliveryPoint":"Retirar en un punto de entrega",
-  "addressOffice":"Agencia Protiendas Calle 5ta con cra 21 esquina\nAguachica - Cesar",
-  "officeHours":"Lunes a sábado de 8 am a 6 pm",
-  "shippingAddress":"Dirección de envío",
-  "viewMapChooseAnotherCollectionPoint":"Ver en el mapa o elegir otro punto de recolección",
-  "yourData":"Tus datos",
-  "editData":"Editar tus datos",
-  "type":"Tipo",
-  "number":"Número",
-  "department":"Departamento",
-  "city":"Ciudad",
-  "addressBuildingApartment":"Dirección, Edificio / Apartamento",
-  "neighborhood":"Barrio",
-  "saveShippingAddress":"Guardar dirección de envío",
-  "billingInformation":"Datos de facturación",
-  "whatInformationShouldAppearInvoice":"¿Qué  datos desea que aparezcan en tu factura?",
-  "theSameShippingInformation":"Los mismos datos del envío",
-  "theDataAnotherPersonCompany":"Los datos de otra persona o empresa",
-  "paymentMethod":"Método de Pago",
-  "howWantPay":"¿Cómo quieres pagar?",
-  "newCreditCard":"Nueva tarjeta de crédito",
-  "newDebitCard":"Nueva tarjeta de débito",
-  "bankTransferWithPse":"Transferencia bancaria con PSE",
-  "efecty":"Efecty",
-  "cardNumber":"Número de la tarjeta",
-  "cardHolderName":"Nombre del títular de la tarjeta",
-  "saveConfirm":"Guardar y confirmar",
-  "makePurchase":"Realizar compra"
+  "grooming": "Aseo",
+  "healthIssues": "Problemas de salud",
+  "strangerFriendly": "Extraña amigable",
+  "shareForFriend": "Compartir a mis amigos",
+  "vocalisation": "Vocalización",
+  "weHaveAErrorContactSuport": "Error {code} \nSi el error persiste, contacta a soporte"
 }
