Feat: new traductions

--- a/lib/l10n/intl_es.arb
+++ b/lib/l10n/intl_es.arb
@@ -1,5 +1,6 @@
 {
   "searchCatbreeds":"Buscar en Catbreeds",
+  "noConection":"Sin conexión",
   "adaptability":"Adaptabilidad",
   "socialNeeds":"Necesidades sociales",
   "weight":"Peso",
